[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/stairs.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Stairs.gd" type="Script" id=2]
[ext_resource path="res://Assets/sound/mixkit-mechanical-crate-pick-up-3154.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 74.6768

[node name="Stairs" type="Node2D" groups=[
"spawn",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SpawnPosition" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0
pitch_scale = 1.62
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
